Build new blog FE structure

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -7328,7 +7328,7 @@ button.close {
 }
 /* Template Style =========== */
 body {
-  font-family: "Roboto", arial, sans-serif;
+  font-family: arial, sans-serif;
   font-weight: 300;
   font-size: 15px;
   line-height: 26px;
@@ -8230,7 +8230,7 @@ pre {
   font-size: 30px;
   line-height: 42px;
   font-weight: 100;
-  font-family: "Roboto", arial, sans-serif;
+  font-family: arial, sans-serif;
 }
 
 .js .to-animate {
